gave link arrows 65px height to fix issue with covering up send button on contact page

--- a/src/style-utils/utils.scss
+++ b/src/style-utils/utils.scss
@@ -47,6 +47,12 @@ a {
     height: fit-content;
     opacity: .7;
     z-index: 10;
+    height: 65px;
+
+    &.opacity-shift {
+        opacity: .1;
+        animation: opacityShift 1s alternate-reverse infinite;
+    }
 
     &:hover {
         opacity: 1;
